Fix resume display on mobile devices.

--- a/src/App/components/Resume/Resume.scss
+++ b/src/App/components/Resume/Resume.scss
@@ -1,8 +1,9 @@
 @import "../../sass/global.module";
 
-#resume {
-  embed {
-    height: 100vh;
-    width: 100vw;
-  }
-}
+// #resume {
+//   embed {
+//     // min-height: 100vh;
+//     // height: auto;
+//     // width: 100vw;
+//   }
+// }
